--- a/GitTutorial/Base.lproj/Main.storyboard
+++ b/GitTutorial/Base.lproj/Main.storyboard
@@ -365,7 +365,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart-tick" translatesAutoresizingMaskIntoConstraints="NO" id="iRQ-Rv-QPh">
-                                            <rect key="frame" x="122" y="315.66666666666669" width="22" height="21"/>
+                                            <rect key="frame" x="122" y="318" width="16" height="16"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXt-lQ-fLW" userLabel="Name Label">
                                             <rect key="frame" x="14" y="270" width="87.333333333333329" height="43"/>
@@ -466,7 +466,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.3622545707" blue="0.1847430347" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="qAB-EV-woh" firstAttribute="bottom" secondItem="tJY-HU-oDR" secondAttribute="bottom" id="Ne8-hV-Wgr"/>
                             <constraint firstItem="tJY-HU-oDR" firstAttribute="leading" secondItem="qAB-EV-woh" secondAttribute="leading" id="U6F-sU-hps"/>
